tests/test49.rael.exp
Error [3:5]: '^' is outside of a routine and a match statement
|     ^ "21"
|     ^
